# python_project_template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
dev/: SetupDevDependencies.ps1  setup_dev_dependencies.sh
src/project_name/: __init__.py
tests/: conftest.py
