[tool.poetry]
# TODO: Set a project name, description, and authors.
name = "project_name"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
yapf = "^0.33.0"
pyright = "^1.1.314"
pre-commit = "^3.3.3"
pytest-cases = "^3.6.14"
pytest-mock = "^3.11.1"